--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -1,1 +1,2 @@
-<p>output works!</p>
+<label>Add an item: <input #newItem></label>
+<button (click)="addNewItem(newItem.value)">Add to parent's list</button>
