--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-input [item]="currentItem"></app-input>
+
+<app-output (newItemEvent)="addItem($event)"></app-output>
+
+<ul>
+    <li *ngFor="let item of items"> {{ item }}</li>
+</ul>
