--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -1,2 +1,5 @@
-<label>Add an item: <input #newItem></label>
-<button (click)="addNewItem(newItem.value)">Add to parent's list</button>
+<div class="outputForm">    
+    <p id="heading">This is the output template</p>
+    <label>Add an item: <input #newItem></label>
+    <button (click)="addNewItem(newItem.value)">Add to parent's list</button>
+</div>
