--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,1 +1,5 @@
-<p>Today's item: {{ item }} </p>
+<div class="inputDecorator">
+    <p class="heading">This is the input template</p>
+    <p>Today's item: {{ item }} </p>
+</div>
+
